syntax = "proto3";

package boundary;

option go_package = "xgo/tests/pb/pbboundary";

import "proto/json.proto";

message InlineMessageCycle1 {
  message EmbedMessage1 {
    string f_string3 = 1 [ (json.field) = { } ];
    string f_string4 = 2 [ (json.field) = { } ];
    InlineMessageCycle1 f_message2 = 3 [ (json.field) = { inline: false } ];
  }

  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  EmbedMessage1 f_message1 = 3 [ (json.field) = { inline: true } ];
}
