syntax = "proto3";

package option_message;

option go_package = "xgo/tests/pb/pboptions";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message IgnoreMessage1 {
  option (json.message) = { ignore: true };

  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  string f_string3 = 3 [ (json.field) = { } ];
}

message DisallowUnknownMessage1 {
  option (json.message) = { disallow_unknown_fields: true };

  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  string f_string3 = 3 [ (json.field) = { } ];
}

message DisallowUnknownMessage2 {
  option (json.message) = { disallow_unknown_fields: false };

  string f_string1 = 1 [ (json.field) = { } ];
  string f_string2 = 2 [ (json.field) = { } ];
  string f_string3 = 3 [ (json.field) = { } ];
}
